<resources>
    <string name="app_name">RecyclingApp</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="select1">TODO</string>
    <string name="history">History</string>
    <string name="rewards">Rewards</string>
    <string name="invite">Invite</string>
    <string name="_1488">1488</string>
    <string name="button">Button</string>
</resources>
